[package]
name = "wtx_tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
color-eyre = "0.6.2"
image = "0.24.9"
image_dds = "0.5.1"
itertools = "0.12.1"
libc = "0.2.153"
raqote = {version = "0.8.3", features= ["png","pathfinder_geometry"], default-features = false}

[lib]
name = "wtx_tools"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "encoder"
path = "src/bin/encoder.rs"
